# AFIRA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  dev.requirements.txt  docker-compose.yaml  init.sh  main.py  models.py  pyproject.toml  requirements.txt
.docker/: afira.dockerfile
config/: context.py  db_check.py  runtime.py
helper/: db.py  default_handler.py  logging.py
lib/: auth.py  data_fetcher.py  device_details.py  sites_details.py
tests/: conftest.py  test_hpe_oauth_client.py  test_logging.py  test_main_loop.py  test_runtime.py
