[project]
name = "afira"
version = "0.1.0"
description = "Aruba Fortigate Information Rate Automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "influxdb-client>=1.50.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
code = ["black>=25.9.0", "isort>=6.0.1", "ruff>=0.13.2"]
dev = [
    "ipykernel>=6.29.4",
    "ipython>=8.23.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.15.1",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "debug.py",
    "build",
    "dist",
    "__pycache__",
    ".venv",
    "venv",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "*.so",
    "*.dylib",
    "*.dll",
]

select = ["E", "W", "F", "I", "D"]
ignore = ["D212", "D107"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"debug*.py" = ["ALL"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv --cov=libs --cov=main --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
